--- a/DueDo/app/build.gradle
+++ b/DueDo/app/build.gradle
@@ -23,4 +23,31 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:design:23.1.1'
+    compile('com.mikepenz:materialdrawer:4.6.3@aar') {
+        transitive = true
+    }
+    compile 'com.mikepenz:iconics-core:2.5.3@aar'
+//    compile 'com.mikepenz:google-material-typeface:2.2.0.1@aar'
+    compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.1@aar'
+    compile 'com.mikepenz:fontawesome-typeface:4.5.0.1@aar'
+    compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
+}
+
+repositories {
+    jcenter()
+    maven { url "http://dl.bintray.com/pixplicity/maven" }
+}
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+    }
+}
+
+dependencies {
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
