--- a/DueDo/app/src/main/AndroidManifest.xml
+++ b/DueDo/app/src/main/AndroidManifest.xml
@@ -15,10 +15,13 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".FormActivity">
-        </activity>
-        <activity android:name=".ShowActivity">
-        </activity>
+        <activity android:name=".FormActivity" />
+        <activity android:name=".ShowActivity" />
+        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+             App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
