added Task model; finished adding a new task

--- a/DueDo/app/build.gradle
+++ b/DueDo/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.ben-manes.versions'
 
 android {
     compileSdkVersion 23
@@ -24,7 +25,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile('com.mikepenz:materialdrawer:4.6.3@aar') {
+    compile('com.mikepenz:materialdrawer:4.6.4@aar') {
         transitive = true
     }
     compile 'com.mikepenz:iconics-core:2.5.3@aar'
@@ -32,12 +33,13 @@ dependencies {
     compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.1@aar'
     compile 'com.mikepenz:fontawesome-typeface:4.5.0.1@aar'
     compile 'com.pixplicity.easyprefs:library:1.8.1@aar'
-    compile 'com.github.satyan:sugar:1.4'
+    compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
 }
 
 repositories {
     jcenter()
     maven { url "http://dl.bintray.com/pixplicity/maven" }
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 buildscript {
@@ -45,7 +47,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
     }
 }
 
