--- a/DueDo/app/src/main/AndroidManifest.xml
+++ b/DueDo/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".DueDoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,6 +18,10 @@
         </activity>
         <activity android:name=".FormActivity" />
         <activity android:name=".ShowActivity" />
+
+        <meta-data android:name="AA_DB_NAME" android:value="DueDu.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        <meta-data android:name="AA_MODELS" android:value="org.usablelabs.duedo.Task" />
     </application>
 
 </manifest>
